# Bringing-Old-Photos-Back-to-Life

./: .dockerignore  .gitignore  Dockerfile  GUI.py  pyproject.toml
Face_Detection/: align_warp_back_multiple_dlib.py  align_warp_back_multiple_dlib_HR.py  detect_all_dlib.py  detect_all_dlib_HR.py
Face_Enhancement/util/: util.py
Global/: detection.py
Global/models/: base_model.py
