[project]
name = "bringing-old-photos-back-to-life"
version = "1.0.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch",
    "torchvision",
    "dlib",
    "scikit-image>=0.22",
    "easydict",
    "PyYAML",
    "dominate>=2.3.1",
    "dill",
    "tensorboardX",
    "scipy",
    "opencv-python",
    "einops",
    "FreeSimpleGUI",
    "matplotlib",
]
